--- a/recipes/colab/pypi_substring_counting.ipynb
+++ b/recipes/colab/pypi_substring_counting.ipynb
@@ -224,7 +224,7 @@
         "# demonstrate.\n",
         "opt_init_args = opt_obj.debug_init_args()\n",
         "opt_init_args['model_fn'] = model_fn\n",
-        "opt_init_args['seed_sequence'] = 'A' * 100\n",
+        "opt_init_args['start_sequence'] = 'A' * 100\n",
         "designer = opt_obj(**opt_init_args)"
       ],
       "metadata": {
