--- a/recipes/colab/custom_task.ipynb
+++ b/recipes/colab/custom_task.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPIsEHpNoycm3qy4x2kMMoD",
+      "authorship_tag": "ABX9TyPACJUZGy+WP+v9LFHg63Yr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/move37-labs/nucleobench/blob/documentation/recipes/colab/custom_task.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/move37-labs/nucleobench/blob/main/recipes/colab/custom_task.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -95,7 +95,7 @@
         "id": "2sqmtWWGpmgC",
         "outputId": "9b2200fe-c26d-44a0-9398-f1551ce0c536"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,7 +134,7 @@
         "id": "SGTGKuiYxIY0",
         "outputId": "f2e54d81-6e37-46e7-aad2-1d6e00d7d728"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -238,7 +238,7 @@
         "id": "0ybztB7L66JL",
         "outputId": "27ccb2e1-eec8-4bec-e0b6-5583bc886f5a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -268,11 +268,12 @@
         "import torch.nn.functional as F\n",
         "\n",
         "from nucleobench.common import constants\n",
-        "from nucleobench.common import attribution_lib_torch as att_lib\n",
         "from nucleobench.common import string_utils\n",
         "\n",
         "from nucleobench.optimizations import model_class as mc\n",
         "\n",
+        "# Inheriting from `TISMModelClass` automatically provides the task object with\n",
+        "# the TISM methods needed for optimizers to work.\n",
         "class CountSubstringModel(torch.nn.Module, mc.TISMModelClass):\n",
         "    \"\"\"Count number of substrings, using convs.\"\"\"\n",
         "    def __init__(self, substring: str, vocab: list[str] = constants.VOCAB):\n",
@@ -296,21 +297,6 @@
         "\n",
         "    def inference_on_tensor(self, x: torch.Tensor) -> torch.Tensor:\n",
         "        return self.forward(x)\n",
-        "\n",
-        "    def tism(self, x: str, idxs: Optional[list[int]] = None) -> tuple[torch.Tensor, list[dict[str, torch.Tensor]]]:\n",
-        "        input_tensor = string_utils.dna2tensor(x, vocab_list=self.vocab)\n",
-        "        sg_tensor = att_lib.smoothgrad_torch(\n",
-        "            input_tensor=input_tensor,\n",
-        "            model=self.inference_on_tensor,\n",
-        "            noise_stdev=0.0,\n",
-        "            times=1,\n",
-        "            idxs=idxs,\n",
-        "        )\n",
-        "        sg = att_lib.smoothgrad_tensor_to_dict(sg_tensor, vocab=self.vocab)\n",
-        "        x_effective = x if idxs is None else [x[idx] for idx in idxs]\n",
-        "        sg = att_lib.smoothgrad_to_tism(sg, x_effective)\n",
-        "        y = self.inference_on_tensor(torch.unsqueeze(input_tensor, dim=0))\n",
-        "        return y, sg\n",
         "\n",
         "    def __call__(self, seqs: list[str]):\n",
         "        torch_seq = string_utils.dna2tensor_batch(seqs)\n",
@@ -350,7 +336,7 @@
         "id": "UDbNLdT6BqG1",
         "outputId": "fef0e366-ff9b-489e-8ded-0053e47cb5a4"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
